# ariadne-lambda

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: code_quality.yml  deploy.yml  run_tests.yml
ariadne_lambda/: __init__.py  base.py  graphql.py  http_handler.py  schema.py
tests/: conftest.py  test_graphql.py  test_http_handler.py  test_schema.py
tests/data/: api_gateway_v1_event.json  api_gateway_v2_event.json  api_gateway_v2_lambda_url_event.json
